# commodity-gpt

./: .gitignore  README.md  commodity_gpt_v1.pt  pyproject.toml  requirement.txt
data/: commodities.txt  dataset.py  test.py
src/atttention/: output_projection_v1.py
src/commodit_gpt/: main.py  model.py  next_token_dataset.py  train copy.py  train.py
src/commodity_gpt/: generate.py  main.py  next_token_dataset.py  train copy.py  train.py
src/commodity_gpt/dataset/: commodity_dataset.py
src/commodity_gpt/embeddings/: similarity_attention.py
src/commodity_gpt/model/: lm_head_v1.py  model.py
src/commodity_gpt/tokenizer/: commodity_tokenizer.py  vocabulary.py
src/commodity_gpt/transformer/: feedfowardnetwork_ffn_v1.py  layernorm_v1.py  multi_head_v1.py  scaled_attention_v1.py  self_attention_v2.py  test.py  transfrom_block_v1.py
src/embeddings/: embedding_v1.py  similarity_attention.py
src/language_model/: create_vocabulary.py  lm_head_v1.py
src/tensor/: exercise copy.py  exercise.py  tensor_intro.py
src/tokenizer/: commodity_tokenizer.py  create_vocabulary.py  tokenizer_v1.py
src/transformer/: residual_v1.py  test.py
