[project]
name = "commodity_gpt"
description = "basic LLM for commodity"
authors = [ {name = "wolfadvisor", email = "carlos@wolfbusinessadvisor.com"} ]
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.12.0,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

